Fixed bg image size and cards alignment

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ html{
 
 /* CSS header style starts here */
 .header{
-  height: 100vh;
+  height: 106vh;
   width: 100%;
   background-color: white;
   background-image: url(Images/DIVA.png);
